--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.3.3",
         "newscoop/plugins-installer": ">=v0.2",
         "newscoop/ingest-plugin-bundle": ">=0.4",
-        "superdesk/contentapi-sdk-php": "1.0.x-dev"
+        "superdesk/contentapi-sdk-php": "1.0.x-dev",
+        "guzzle/guzzle":"v3.9.2"
     },
     "autoload": {
         "psr-0": { "Newscoop\\IngestParserSuperdeskContentAPIBundle\\NewscoopIngestParserSuperdeskContentAPIBundle": "" }
